--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,17 @@ a:hover {
   list-style-type: none;
 }
 
+.image {
+  width: 410px;
+  border-radius: 10px 30px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .image {
+    max-width: 100%;
+  }
+}
+
 @media only screen and (max-width: 700px) {
   .nav-menu {
     background: #d1ccdc;
