--- a/src/App.css
+++ b/src/App.css
@@ -89,11 +89,11 @@ a:hover {
 }
 
 ::-moz-selection {
-  background: #DDDAFF; 
+  background: #f5e2e2; 
   color: #1b1725;
 }
 ::selection {
-  background: #DDDAFF;
+  background: #f5e2e2;
   color: #1b1725;
 }
 
