--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Vidaloka&family=Comfortaa:wght@300;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Vidaloka&family=Comfortaa:wght@300;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -8,7 +8,7 @@
 
 body {
   text-align: center;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 1.2rem;
   background-color: #1b1725;
   color: #1b1725;
@@ -21,13 +21,13 @@ body {
 }
 
 h1 {
-  font-family: 'Vidaloka', cursive;
+  font-family: "Vidaloka", cursive;
   font-size: 3rem;
   padding-bottom: 3rem 0;
 }
 
 h2 {
-  font-family: 'Comfortaa', cursive;
+  font-family: "Comfortaa", cursive;
   font-size: 2rem;
   font-weight: 400;
 }
@@ -47,7 +47,7 @@ ul {
 }
 
 a, a:active, a:visited {
-  font-family: 'Comfortaa', cursive;
+  font-family: "Comfortaa", cursive;
   font-weight: 700;
   text-decoration: none;
   color: #1b1725;
@@ -105,7 +105,7 @@ a:hover {
 }
 
 button {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   letter-spacing: 1px;
   padding: .8rem;
   text-align: center;
